[flake8]
ignore =
    # E501: Line too long (82 > 79 characters)
    E501,
    # I101: The names in your from import are in the wrong order
    I101
application-import-names = macrobase, tests
exclude = .git,venv,__pycache__,build,dist
import-order-style = google

[metadata]
description-file = README.md